--- a/HashWorkerBlazor/Pages/_Layout.cshtml
+++ b/HashWorkerBlazor/Pages/_Layout.cshtml
@@ -44,6 +44,7 @@
     <!--Custom Scripts-->
     <script src="~/md5helper.js"></script>
     <script src="~/saveasfile.js"></script>
+    <script src="~/clipboardHelper.js"></script>
     <!--Custom Scripts-->
 </body>
 </html>
